Fix user's avatar image not fit to content

--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -19,6 +19,7 @@ h2 {
 
 .avatar {
   width: 40px;
+  height: 40px;
   border-radius: 50%;
   cursor: pointer;
   object-fit: cover;
